fixed layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,101 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+@media print {
+.block.editable, .noprint {
+  display:none;
+}
+  .block:nth-child(9) {
+      page-break-after: always;
+  }
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.schwierigkeit > div > input,
+.zauberdauer > div > input,
+.kosten > div > input, 
+.reichweite > div > input,
+.wirkungsdauer > div > input
+{
+width: 2em;
+}
+.block.editable {
+position: relative;
+overflow:visible;
+}
+.editable > .block-picker {
+position: absolute !important;
+left: 230px;
+border: 1px solid #aaaaaa;
+width: 14.5em !important;
+z-index: 1999;
+}
+div > button {
+  margin: 0.5em 1em;
+  padding: 0.5em 1em;
+  border-radius: 8px;
+  border: 1px solid #aaaaaa;
+width: 7em;
+}
+.block {
+  position: relative;
+}
+.block > .deleteButton {
+  color:#ffffff;
+  background-color: #ff0000;
+  border:1px solid #dddddd;
+  position: absolute;
+  left: 25%;
+  display: none;
+}
+.block:hover > .deleteButton {
+  display: block;
 }
 
-.App-title {
-  font-size: 1.5em;
-}
 
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
+  * {
+      font-family: 'Open Sans', sans-serif;
+      font-family: 'PT Sans', sans-serif;
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      border: none;
+      -webkit-print-color-adjust: exact;
+  }
+  .block {
+      display: inline-block;
+      font-size: 12px;
+      height: 319px;
+      width: 222px;
+      border: 3px solid #000000;
+      margin: 0 1px 0 0;
+      padding: 10px 10px;
+      background-color: #dddddd;
+      border-radius: 5px;
+      overflow: hidden;
+  }
+  .block>table {
+      background-color: #ffffff;
+      height: 100%;
+      border-radius: 5px;
+      min-width: 196px;
+  }
+  .block>table h2 {
+      text-align: center;
+  }
+  .block>table th,
+  .block>table td {
+      text-align: left;
+  }
+  .block>table th.erfolgsgrade {
+      text-align: center;
+  }
+  .block>table td.verbesserung {
+      font-size: 0.9em;
+      font-style: italic;
+  }
+  .block>table td.enchanted {
+      font-size: 0.9em;
+  }
